--- a/src/css/template.scss
+++ b/src/css/template.scss
@@ -3,7 +3,8 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
-	background-color: var(--body-bg);
+  background-color: var(--color-bg-darker);
+	color: var(--color-contrast-higher);
 	overflow-y:scroll;
 }
 
@@ -15,13 +16,13 @@ header, footer, main {
 }
 
 header, footer{
-	background-color: var(--top-bg);
-	color: var(--top-color);
+	background-color: var(--color-primary);
+	color: var(--color-white);
 }
 
 main {
   flex-grow: 1;
-	background-color: var(--art-bg);
+  background-color: var(--color-bg);
 	padding-top:2rem;
 }
 
